# mashumaro-pyo3-benchmark

./: Dockerfile  README.md  benchmarks.py  demonstration.py  requirements.txt  schema.py
.devcontainer/: devcontainer.json
schema_rs/: Cargo.toml  pyproject.toml
schema_rs/src/: lib.rs
