[package]
name = "schema_rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "schema_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.15.1", features = ["extension-module"] }

serde = "1.0"
serde_bytes = "0.11"
serde_derive = "1.0"

serde_json = "1.0.79"

rmp = "0.8"
rmp-serde = "0.15"